[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-tree"
version = "0.1.0"
description = "A cryptographically secure, self-balancing AVL tree for blockchain transaction indexing. O(log n) search with Merkle proofs."
readme = "README.md"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security :: Cryptography",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "ruff",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.ruff]
select = ["E", "W", "F", "I"]
target-version = "py38"