[package]
name = "crypto_tree"
version = "0.1.0"
edition = "2021"
description = "A cryptographic Merkle tree implementation for secure transaction verification."
license = "MIT"

[lib]
name = "crypto_tree"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.0"

[profile.release]
opt-level = "z"
strip = true
lto = true